--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -22,6 +22,12 @@
 #newsMessage {
   display: none;
 }
+a {
+  &:focus, &:active {
+    outline: none;
+    text-decoration: none;
+  }
+}
 #welcome_room_app {
   text-align: center;
   padding: 1em;
@@ -29,7 +35,25 @@
   color: $brand-primary;
   background-color: rgba($body-bg, 0.5);
 }
-
+.welcome-nav {
+  margin: auto 20%;
+  a {
+    background: #b7282e;
+    border: 1px solid transparent;
+    color: white;
+    display: block;
+    padding: 0.5em;
+    margin: 0.25em;
+    font-size: 1.5em;
+    width: 60%;
+    &:hover, &:active {
+      text-decoration: none;
+      border: 1px solid #b7282e;
+      background: transparent;
+      color: #b7282e;
+    }
+  }
+}
 h1, h2, h3, h4, h5, h6 {
   color: #333;
 }
