--- a/public/assets/scss/_bootstrap-variables.scss
+++ b/public/assets/scss/_bootstrap-variables.scss
@@ -20,7 +20,7 @@
 // $gray-lighter:           lighten(#000, 93.5%) // #eee
 
 $brand-primary: #b7282e;
-// $brand-success:         #5cb85c
+$brand-success: #1a861c;
 $brand-info: #b7282e;
 // $brand-warning:         #f0ad4e
 $brand-danger: #b7282e;
