--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -902,8 +902,6 @@ a {
     color: #781a1e;
     text-decoration: underline; }
   a:focus {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px; }
 
 figure {
@@ -2230,8 +2228,6 @@ select[size] {
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px; }
 
 output {
@@ -2667,10 +2663,6 @@ select[multiple].input-lg,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none; }
-  .btn:focus, .btn:active:focus, .btn.active:focus {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
-    outline-offset: -2px; }
   .btn:hover, .btn:focus {
     color: #333;
     text-decoration: none; }
@@ -6110,7 +6102,8 @@ form .double-line {
 form label {
   /*white-space: nowrap;*/
   display: block;
-  color: #333; }
+  color: #333;
+  font-size: 1.2em; }
 form input:focus {
   border-color: #b7282e !important;
   box-shadow: 0 0 5px rgba(183, 40, 46, 0.4) !important;
@@ -6163,11 +6156,12 @@ form .inline-input-short {
   border-right: none; }
 form input[name=example] {
   background-color: #ffffff !important; }
-form .btn.active,
-form .btn:active,
-form .btn:focus {
-  outline: none;
+form .btn:focus, form .btn:active:focus, form .btn.active:focus {
+  outline: 5px auto #b7282e !important;
+  outline-offset: -2px;
   -webkit-appearance: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
   border: 1px solid #b7282e; }
 
 input[type=checkbox] {
