--- a/public/assets/scss/_bootstrap-variables.scss
+++ b/public/assets/scss/_bootstrap-variables.scss
@@ -18,12 +18,11 @@
 // $gray:                   lighten(#000, 33.5%) // #555
 // $gray-light:             lighten(#000, 46.7%) // #777
 // $gray-lighter:           lighten(#000, 93.5%) // #eee
-
-$brand-primary: #b7282e;
-$brand-success: #1a861c;
-$brand-info: #b7282e;
-// $brand-warning:         #f0ad4e
 $brand-danger: #b7282e;
+$brand-primary: $brand-danger;
+$brand-success: #1a861c;
+$brand-info: $brand-danger;
+// $brand-warning:         #f0ad4e
 
 //== Scaffolding
 //
@@ -57,7 +56,7 @@ $font-size-base:          14px;
 // $font-size-large:         ceil(($font-size-base * 1.25)) // ~18px
 // $font-size-small:         ceil(($font-size-base * 0.85)) // ~12px
 
-$color-h1: #b7282e;
+$color-h1: $brand-danger;
 $color-form-el: #333333;
 // $font-size-h1:            floor(($font-size-base * 2.6)) // ~36px
 // $font-size-h2:            floor(($font-size-base * 2.15)) // ~30px
