--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -22,6 +22,16 @@
 #newsMessage {
   display: none;
 }
+#hideAll {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: -1px;
+  z-index: 4999;
+  background-color: rgba(58, 58, 58, 0.5);
+}
 a {
   &:focus, &:active {
     outline: none;
