--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -202,8 +202,8 @@ label {
     background-color: white;
     display: none;
     .tooMuchBeds {
-      color: #b7282e;
-      border: 2px solid #b7282e;
+      color: $brand-danger;
+      border: 2px solid $brand-danger;
       font-weight: bold;
       padding: 0px 0 0 5px;
       margin: 0 0 0 -5px;
