--- a/public/assets/scss/errors.scss
+++ b/public/assets/scss/errors.scss
@@ -43,6 +43,13 @@
   background-color: #ffffff;
   border-color: $color-h1;
   color: #000000;
+  position: absolute;
+  z-index: 5000;
+  width: 66%;
+  margin: 39vh;
+  -webkit-box-shadow: -6px 8px 5px 0px rgb(75, 75, 75);
+  -moz-box-shadow: -6px 8px 5px 0px rgb(75, 75, 75);
+  box-shadow: -6px 8px 5px 0px rgb(75, 75, 75);
 }
 
 #message {
