--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -15,7 +15,7 @@
 @import "form";
 @import "left_menu";
 @import "select2";
-@import "scrollbars";
+//@import "scrollbars";
 @import "links";
 @import "navbar";
 /*@import "stats";*/
@@ -427,7 +427,7 @@ li.lang_active > a {
   width: 100%;
   height: 35px;
   font-size: 0.85em;
-  background-color: #f5f5f5;
+  background-color: #ccc;
   z-index: 1001;
   position: fixed;
   bottom: 0;
