--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -62,7 +62,7 @@
     border: 0.13333em solid #b7282e; }
 
 label {
-  white-space: nowrap; }
+  white-space: normal; }
 
 .show_total_res {
   border: .13333em solid #b7b7b7;
@@ -142,13 +142,13 @@ label {
 #free_beds_container {
   position: fixed;
   right: 0px;
-  z-index: 5000;
+  z-index: 10;
   background-color: white; }
   #free_beds_container #free_beds {
     position: fixed;
     top: 13.5vh;
     right: 0;
-    z-index: 10000;
+    z-index: 10;
     cursor: pointer;
     background-color: #b7282e;
     color: white; }
@@ -187,14 +187,14 @@ label {
 #timeliner-container {
   position: fixed;
   left: 0;
-  z-index: 5000;
+  z-index: 10;
   background-color: white; }
   #timeliner-container #timeliner-div {
     cursor: pointer;
     position: fixed;
     left: 0px;
     top: 13.5vh;
-    z-index: 5000;
+    z-index: 10;
     overflow: auto;
     color: white;
     background-color: #b7282e; }
