Back on main machine

--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -62,7 +62,9 @@
     border: 0.13333em solid #b7282e; }
 
 label {
-  white-space: normal; }
+  white-space: normal;
+  min-height: 0;
+  vertical-align: bottom; }
 
 .show_total_res {
   border: .13333em solid #b7b7b7;
