--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -201,6 +201,15 @@ label {
       margin: 0 0 0 -5px;
       border-left: none;
     }
+    #all-free-beds_title {
+        position: relative;
+        left: 0;
+        width: 100%;
+        height: 1.7em;
+        background: $brand-danger;
+        padding: 0.2em;
+        color: white;
+    }
   }
 }
 #reservationInfo {
