Userlist filter repaired

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -452,8 +452,9 @@ li.lang_active > a {
 .text-muted {
   float: left;
   margin: 10px 0 6px 0;
-  a {
-    color: #2a282a;
+    color: #fff;
+    a {
+    color: #fff;
   }
 }
 
