--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6230,6 +6230,12 @@ form .btn:focus, form .btn:active:focus, form .btn.active:focus {
 a {
   color: #b7282e; }
 
+.nav-clan {
+  background-color: #fff !important; }
+  .nav-clan:hover {
+    background-color: #fff !important;
+    color: white; }
+
 .navbar-default {
   font-weight: bold; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
@@ -6238,9 +6244,14 @@ a {
   .navbar-default .navbar-nav > li > a {
     color: #f7f7f7;
     padding-top: 18px;
-    padding-bottom: 18px; }
+    padding-bottom: 18px;
+    font-weight: normal;
+    font-size: 1.1em; }
   .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     background-color: #b7282e !important;
+    color: white !important; }
+  .navbar-default .navbar-nav > li > a:not([href]):hover, .navbar-default .navbar-nav > li > a:not([href]):focus {
+    background-color: #333 !important;
     color: white !important; }
 
 .navbar-toggle {
@@ -6267,6 +6278,10 @@ a {
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-menu > li > a:active {
   background-color: #b7282e !important;
+  color: white !important; }
+
+.dropdown-menu > li > a:not([href]):hover, .dropdown-menu > li > a:not([href]):focus, .dropdown-menu > li > a:not([href]):active {
+  background-color: #333 !important;
   color: white !important; }
 
 .navbar {
@@ -6611,9 +6626,10 @@ li.lang_active > a {
 
 .text-muted {
   float: left;
-  margin: 10px 0 6px 0; }
+  margin: 10px 0 6px 0;
+  color: #fff; }
   .text-muted a {
-    color: #2a282a; }
+    color: #fff; }
 
 .navbar-brand {
   padding: 3px 15px; }
