--- a/public/assets/css/datatables_roomapp.css
+++ b/public/assets/css/datatables_roomapp.css
@@ -1,13 +1,7 @@
-#users thead tr th {
-  vertical-align: top;
-  border-bottom: 1px solid #b7282e; }
 #users tbody tr td {
-  vertical-align: top;
-  padding: 0 0.5em; }
+  vertical-align: top; }
   #users tbody tr td:before {
     background-color: #b7282e; }
-  #users tbody tr td ul {
-    list-style-type: none; }
   #users tbody tr td.control {
     padding: 0 0.75em; }
     #users tbody tr td.control:before {
@@ -15,7 +9,17 @@
       width: 19px;
       margin-top: -13px;
       margin-left: -16px; }
+  #users tbody tr td:first-child:before {
+    top: 3px;
+    left: 1px; }
 #users tbody tr.odd {
   background-color: #cbcbcb; }
+#users tbody tr.child ul.dtr-details {
+  list-style-type: disc;
+  width: 100%;
+  margin: 2px;
+  padding: 4px 22px; }
+#users tbody tr.child td {
+  border-bottom: 1px solid #b7282e; }
 
 /*# sourceMappingURL=datatables_roomapp.css.map */
